removed dependence on javax.xml.bind for base64 encoding/decoding